--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ group = 'com.Mojo'
 version = '1.0-SNAPSHOT'
 
 java {
-    archivesBaseName = 'DrMod'
+    archivesBaseName = 'drmod'
     toolchain.languageVersion = JavaLanguageVersion.of(8)
 }
 
